estilização dos Principais componentes

--- a/index.html
+++ b/index.html
@@ -13,14 +13,35 @@
             <a href="#">Jogos em promocao</a>
         </div>
     </header>
-    <section>
-        <div class="card">
+    <section class="container" >
+        <div class="news" >
             <h2>Lancamentos</h2>
-            <div>
+            <div class="card" >
                 <img src="lancamento " alt="" class="Logo" >
                 <i>03/07/2024 as 8:34</i>
                 <title>Elder ring</title>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia culpa dolor ipsum? Reprehenderit cumque maiores sit odio, ex cupiditate quo consectetur eaque id laborum aut soluta corporis, nisi esse eos!</p>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+        <div class="news">
+            <h2>Lancamentos</h2>
+            <div class="card" >
+                <img src="lancamento " alt="" class="Logo" >
+                <i>03/07/2024 as 8:34</i>
+                <title>Elder ring</title>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia culpa dolor ipsum? Reprehenderit cumque maiores sit odio, ex cupiditate quo consectetur eaque id laborum aut soluta corporis, nisi esse eos!</p>
+                <a href="#">Ler mais</a>
+            </div>
+        </div>
+        <div class="news">
+            <h2>Lancamentos</h2>
+            <div class="card" >
+                <img src="lancamento " alt="" class="Logo" >
+                <i>03/07/2024 as 8:34</i>
+                <title>Elder ring</title>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia culpa dolor ipsum? Reprehenderit cumque maiores sit odio, ex cupiditate quo consectetur eaque id laborum aut soluta corporis, nisi esse eos!</p>
+                <a href="#">Ler mais</a>
             </div>
         </div>
     </section>
